--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,6 +1,10 @@
 // Colors
+$dark-grey: #333;
+$blue: #1c88bf;
+$dark-blue: #364051;
 
-
+// Font Size
+$font-size-large: 1.8rem;
 
 // Spacing
 $s-size: 1.2rem;
