Authentication with Firebase anonymously

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -11,9 +11,14 @@
 }
 
 .button--link {
-  background: none
+  background: none;
 }
 
 .button--secondary {
-  background: #888
+  background: #888;
+}
+
+.button--login {
+  width: 85%;
+  margin-top: $m-size
 }
